# Sealchest

./: .gitignore  HANDOFF.md  LICENSE  NTFS_修复进展_0720.md  PROGRESS.md  README.en.md  README.md  gradle.properties  settings.gradle.kts  上游同步与供应链安全.md  测试手册.md  路线图.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp  sc_compat.h  sc_random.c  sc_stubs.c  sc_test.c  sc_volume.c  sc_volume.h  sha256.cpp  sha256.h
app/src/main/cpp/shim/: io.h  strsafe.h
app/src/main/java/com/henglie/sealchest/: MainActivity.kt  SealchestApp.kt  SettingsDialog.kt  SettingsScreen.kt
app/src/main/java/com/henglie/sealchest/benchmark/: BenchmarkRunner.kt  BenchmarkScreen.kt
app/src/main/java/com/henglie/sealchest/browse/: BrowserScreen.kt  FileExport.kt  MediaViewer.kt
app/src/main/java/com/henglie/sealchest/core/: AutoLock.kt  BiometricUnlock.kt  BlockDeviceEnumerator.kt  BlockDeviceUnlocker.kt  MountForegroundService.kt  PanicManager.kt  PinManager.kt  RootManager.kt  Settings.kt  SystemMounter.kt
app/src/main/java/com/henglie/sealchest/create/: CreateVolumeScreen.kt
app/src/main/java/com/henglie/sealchest/crypto/: KeyfileMixer.kt  NativeBridge.kt
app/src/main/java/com/henglie/sealchest/fs/: Bpb.kt  ContainerFormat.kt  ExFatBoot.kt  ExFatFileSystem.kt  ExFatFormatter.kt  FatFileSystem.kt  FatFormatter.kt  HiddenVolumeCreator.kt  MountManager.kt  NtfsBoot.kt  NtfsDataOps.kt  NtfsFileSystem.kt  NtfsFormatter.kt  NtfsIndex.kt  NtfsMftManager.kt  NtfsRecordCodec.kt  NtfsRecords.kt  NtfsSecure.kt  NtfsTables.kt  PasswordChanger.kt  VolumeBatchTest.kt  VolumeCreator.kt  VolumeExpander.kt  VolumeFs.kt  VolumeHeaderTool.kt  VolumeReader.kt
app/src/main/java/com/henglie/sealchest/saf/: SafNotify.kt  SealchestDocumentsProvider.kt
app/src/main/java/com/henglie/sealchest/ui/: PinGateScreen.kt
app/src/main/java/com/henglie/sealchest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_background_round.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/henglie/sealchest/: NtfsClusterSizeDiagnosticTest.kt  NtfsEmitRawTest.kt  NtfsFormatterInvariantsTest.kt  NtfsIndexPartitionTest.kt  NtfsLargeClusterIndexTest.kt  NtfsSecureViewIndexTest.kt  NtfsWritePathTest.kt  SampleUnitTest.kt
gradle/: libs.versions.toml
